@@ -1,0 +1,31 @@
+# Typical message
+MSH|^~\&|EPIC|CMCD|COREPOINT|PACEART|20200902100427|JESVER|SIU^S15|1089|T|2.5
+SCH||201024386|||||||30|MIN|^^30^20200904080000^20200904083000|||||||||JESVER^VERNAGLIA^JESSICA|||||Can
+PID|1|345345456|576786|97890798|LNAME7|LNAME4^FNAME4|200009310000|F|||123 MAIN ST^^ANYTOWN^AL^35555^USA^H||(205)765-4321^PRN|(205)999-9999^WPN|ENGLISH
+PV1|1|O|LGS^^^10^^^LEGACY^LGY^^^CMCDDEP||||999999^FOOBAR^KIM^FOOBAR^^^^^PROVID^^^^PROVID~8383838383^FOOBAR^KIM^FOOBAR^^^^^CMCDPNPI^^^^CMCDPNPI~000001731^FOOBAR^KIM^FOOBAR^^^^^EMPID^^^^EMPID|||SUR||||||||O|107583331|||||||||||||||||||||||||20200902143645
+OBX|5|DTM|^ARRIVAL TIME|1|20200904074500|||||||||20200904
+RGS|1||102052^FOOBAR ENDOCRINOLOGY
+AIS|1||2248^TELEMED FOLLOW UP|||||||Can
+AIP|1||9090909^BOOJA^POOJA^^^^^^PROVID^^^^PROVID|100^MD||20200904080000|0|MIN|30|MIN
+ZPL||3544^TELEHEALTH VISIT
+
+# Sample A08 message
+MSH:;~\&:ST01:B:IM:B:20061211154319::ADT;A08:6917898:P:2.2:6917898::AL:::::::2.2b
+EVN:A08:20061211154319:::MRP
+PID:1:01001991;;;ST01:988747372;;;ST01B;MR~983928341;;;ST01C;MR~93823848;;;ST01;PI::JONES6;SMITH;P;""::13939394:F::2:123 MAIN ST;;ANYTOWN;AL;35432;USA;H;01;;;;;;;;;Y::(205)555-1212:(205)555-1212:E;ENGLISH;HL70296;E;ENGLISH;99CLAN:M:CH:039838382;;;ST01B:123-45-6789:::::N:::N:2;NON-HISPANIC;99NAT::N:N:::::::::::::::::::N
+PV1:1:I:MD5W;0541;00;B;OCC::
+ZAX:AAA;111&222&&444;;3333;~BBB;111&222&&;;3333:foobar:~~:escapes1=\F\\S\\R\\E\\T\;escapes2=|^\R\\E\\T\:
+ZAX:two
+
+# Same message with standard field separators
+MSH|^~\&|ST01|B|IM|B|20061211154319||ADT^A08|6917898|P|2.2|6917898||AL|||||||2.2b
+EVN|A08|20061211154319|||MRP
+PID|1|01001991^^^ST01|988747372^^^ST01B^MR~983928341^^^ST01C^MR~93823848^^^ST01^PI||JONES6^SMITH^P^""||13939394|F||2|123 MAIN ST^^ANYTOWN^AL^35432^USA^H^01^^^^^^^^^Y||(205)555-1212|(205)555-1212|E^ENGLISH^HL70296^E^ENGLISH^99CLAN|M|CH|039838382^^^ST01B|123-45-6789|||||N|||N|2^NON-HISPANIC^99NAT||N|N|||||||||||||||||||N
+PV1|1|I|MD5W^0541^00^B^OCC||
+ZAX|AAA^111&222&&444^^3333^~BBB^111&222&&^^3333|foobar|~~|escapes1=:;\R\\E\\T\^escapes2=\F\\S\\R\\E\\T\|
+ZAX|two
+
+
+MSH|^~\&|ST01|B|IM|B|20061211154319||ADT^A08|6917898|P|2.2|6917898||AL|||||||2.2b
+ZAX|~foo~|foo^^|foo&bar&&||
+
