@@ -1,3 +1,7 @@
+Version Next
+
+    - Add the ability to parse our generated XML
+
 Version 1.3.1 Released October 9, 2025
 
     - Gracefully handle IllegalCharsetNameException if thrown
